--- a/Ohjelmistotuotanto_Projekti/Ohjelmistotuotanto_Projekti.csproj
+++ b/Ohjelmistotuotanto_Projekti/Ohjelmistotuotanto_Projekti.csproj
@@ -117,6 +117,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Alue_ja_MokkiDataset.xsd</DependentUpon>
     </Compile>
+    <Compile Include="frmMajoitusRaportti.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmMajoitusRaportti.Designer.cs">
+      <DependentUpon>frmMajoitusRaportti.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMokit.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -129,6 +135,12 @@
     <Compile Include="frmAlueet.Designer.cs">
       <DependentUpon>frmAlueet.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmPalveluidenRaportointi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmPalveluidenRaportointi.Designer.cs">
+      <DependentUpon>frmPalveluidenRaportointi.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Valikko.cs">
@@ -137,11 +149,23 @@
     <Compile Include="Valikko.Designer.cs">
       <DependentUpon>Valikko.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmVaraukset.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmVaraukset.Designer.cs">
+      <DependentUpon>frmVaraukset.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="frmAlueet.resx">
       <DependentUpon>frmAlueet.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmMajoitusRaportti.resx">
+      <DependentUpon>frmMajoitusRaportti.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMokit.resx">
       <DependentUpon>frmMokit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPalveluidenRaportointi.resx">
+      <DependentUpon>frmPalveluidenRaportointi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -154,6 +178,9 @@
     </Compile>
     <EmbeddedResource Include="Valikko.resx">
       <DependentUpon>Valikko.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmVaraukset.resx">
+      <DependentUpon>frmVaraukset.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Alue_ja_MokkiDataset.xsc">
       <DependentUpon>Alue_ja_MokkiDataset.xsd</DependentUpon>
