--- a/Ohjelmistotuotanto_Projekti/Ohjelmistotuotanto_Projekti.csproj
+++ b/Ohjelmistotuotanto_Projekti/Ohjelmistotuotanto_Projekti.csproj
@@ -117,6 +117,13 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Alue_ja_MokkiDataset.xsd</DependentUpon>
     </Compile>
+    <Compile Include="frmPalvelut.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include=".Designer.cs">
+      <DependentUpon>frmPalvelut.cs</DependentUpon>
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmMajoitusRaportti.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -166,6 +173,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmPalveluidenRaportointi.resx">
       <DependentUpon>frmPalveluidenRaportointi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPalvelut.resx">
+      <DependentUpon>frmPalvelut.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
